--- a/index.html
+++ b/index.html
@@ -4,20 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="main.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <title>La bandera</title>
 </head>
 <body>
   <seccion class="box">
+    <h1>Modelo</h1>
+    <hr>
     <div class="cajas"></div>
     <div class="cajas"></div>
     <div class="cajas"></div>
   </seccion>
   <seccion class="box">
+    <h1>Ejercicio  1</h1>
+    <hr>
     <div class="cajas"></div>
     <div class="cajas"></div>
     <div class="cajas"></div>
   </seccion>
   <seccion class="box">
+    <h1>Ejercicio 2 </h1>
+    <hr>
     <div class="cajas"></div>
     <div class="cajas"></div>
     <div class="cajas"></div>
