--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
   <title>La bandera</title>
 </head>
 <body>
-  <seccion class="box">
+  <seccion class="box uno">
     <h1>Modelo</h1>
     <hr>
     <div class="cajas"></div>
     <div class="cajas"></div>
     <div class="cajas"></div>
   </seccion>
-  <seccion class="box">
+  <seccion class="box dos">
     <h1>Ejercicio  1</h1>
     <hr>
     <div class="cajas"></div>
     <div class="cajas"></div>
     <div class="cajas"></div>
   </seccion>
-  <seccion class="box">
+  <seccion class="box tres">
     <h1>Ejercicio 2 </h1>
     <hr>
     <div class="cajas"></div>
